--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="row">
         <div class="col-4">
           <div class="row">
-            <div class="col-2"><img class="rounded-circle" alt="Free Shipping" src="images/40X40.gif"></div>
+            <div class="col-2"><img class="rounded-circle" alt="Free Shipping" src="images/icons8-entrega-50.png"></div>
             <div class="col-lg-6 col-10 ml-1">
               <h4>Free Shipping</h4>
             </div>
@@ -100,7 +100,7 @@
         </div>
         <div class="col-4">
           <div class="row">
-            <div class="col-2"><img class="rounded-circle" alt="Free Shipping" src="images/40X40.gif"></div>
+            <div class="col-2"><img class="rounded-circle" alt="Free Shipping" src="images/icons8-devolución-de-compra-50.png"></div>
             <div class="col-lg-6 col-10 ml-1">
               <h4>Free Returns</h4>
             </div>
@@ -108,7 +108,7 @@
         </div>
         <div class="col-4">
           <div class="row">
-            <div class="col-2"><img class="rounded-circle" alt="Free Shipping" src="images/40X40.gif"></div>
+            <div class="col-2"><img class="rounded-circle" alt="Free Shipping" src="images/icons8-precio-bajo-50.png"></div>
             <div class="col-lg-6 col-10 ml-1">
               <h4>Low Prices</h4>
             </div>
@@ -193,21 +193,21 @@
         <div class="col-lg-4">
           <ul class="list-unstyled">
             <li class="media">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/Diseño sin título 10.png" alt="Generic placeholder image">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">List-based media object</h5>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
               </div>
             </li>
             <li class="media my-4">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/Diseño sin título 13.png" alt="Generic placeholder image">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">List-based media object</h5>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
               </div>
             </li>
             <li class="media">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/Diseño sin título 16.png" alt="Generic placeholder image">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">List-based media object</h5>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
@@ -218,21 +218,21 @@
         <div class="col-lg-4">
           <ul class="list-unstyled">
             <li class="media">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/Diseño sin título 11.png" alt="Generic placeholder image">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">List-based media object</h5>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
               </div>
             </li>
             <li class="media my-4">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/Diseño sin título 14.png" alt="Generic placeholder image">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">List-based media object</h5>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
               </div>
             </li>
             <li class="media">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/Diseño sin título 17.png" alt="Generic placeholder image">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">List-based media object</h5>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
@@ -243,21 +243,21 @@
         <div class="col-lg-4">
           <ul class="list-unstyled">
             <li class="media">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/Diseño sin título 12.png" alt="Generic placeholder image">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">List-based media object</h5>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
               </div>
             </li>
             <li class="media my-4">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/Diseño sin título 15.png" alt="Generic placeholder image">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">List-based media object</h5>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
               </div>
             </li>
             <li class="media">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/Diseño sin título 18.png" alt="Generic placeholder image">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">List-based media object</h5>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
@@ -272,13 +272,7 @@
       <div class="row">
         <div class="col-6 col-md-8 col-lg-7">
           <div class="row text-center">
-            <div class="col-sm-6 col-md-4 col-lg-4 col-12">
-              <ul class="list-unstyled">
-
-                <img src="images/icons8-whatsapp-100.png" width="100" height="100" alt=""/>
-
-              </ul>
-            </div>
+            <div class="col-sm-6 col-md-4 col-lg-4 col-12"><a href="https://web.whatsapp.com/" target="_blank"><img src="images/icons8-whatsapp-100.png" width="100" height="100" alt=""></a> </div>
             <div class="col-sm-6 col-md-4 col-lg-4 col-12"><a href="https://www.facebook.com/profile.php?id=61556977722848" target="_blank"><img src="images/icons8-facebook-100.png" width="100" height="100" alt=""></a>
               <ul class="list-unstyled">
 
@@ -310,7 +304,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright © MyWebsite. All rights reserved.</p>
+            <p>Copyright © Daniel Xajpot. All rights reserved.</p>
           </div>
         </div>
       </div>
