--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Relojería "El tiempo es oro"&nbsp; &nbsp;<br>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -125,8 +126,8 @@
           <div class="card">
             <img class="card-img-top" src="images/Diseño sin título 4.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Jaeger-LeCoultre (Atmos)</h5>
+              <p class="card-text">El Atmos funciona literalmente con aire; una cápsula interna se expande y contrae con los cambios de temperatura ambiente, dándole energía infinita sin necesidad de pilas ni cuerdas manuales.</p>
               <a href="#" class="btn btn-primary">Add to Cart</a>
             </div>
           </div>
@@ -135,8 +136,9 @@
           <div class="card">
             <img class="card-img-top" src="images/Diseño sin título 5.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Patek Philippe (Relojes de Cúpula)</h5>
+              <p class="card-text"><br>
+              </p>
               <a href="#" class="btn btn-primary">Add to Cart</a>
             </div>
           </div>
@@ -145,8 +147,8 @@
           <div class="card">
             <img class="card-img-top" src="images/Diseño sin título 6.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">L’Epée 1839</h5>
+              <p class="card-text">La manufactura suiza más prestigiosa dedicada exclusivamente a relojes de mesa de alta gama. Son famosos por sus diseños futuristas (relojes con forma de cohete, robots o arañas).</p>
               <a href="#" class="btn btn-primary">Add to Cart</a>
             </div>
           </div>
@@ -157,8 +159,8 @@
           <div class="card">
             <img class="card-img-top" src="images/Diseño sin título 7.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Erwin Sattler</h5>
+              <p class="card-text">Si buscas la perfección alemana en relojes de pared de péndulo, esta es la marca. Sus relojes son instrumentos de precisión astronómica con acabados en madera preciosa y metales finos.</p>
               <a href="#" class="btn btn-primary">Add to Cart</a>
             </div>
           </div>
@@ -167,8 +169,8 @@
           <div class="card">
             <img class="card-img-top" src="images/Diseño sin título 8.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">MB&amp;F</h5>
+              <p class="card-text">Aunque son un laboratorio conceptual, colaboran con L’Epée para crear esculturas cinéticas que dan la hora. Son piezas de vanguardia para mansiones modernas.</p>
               <a href="#" class="btn btn-primary">Add to Cart</a>
             </div>
           </div>
@@ -177,8 +179,8 @@
           <div class="card">
             <img class="card-img-top" src="images/Diseño sin título 9.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Hermle</h5>
+              <p class="card-text">Una de las marcas alemanas más icónicas. Sus relojes de pie son el estándar de lujo tradicional, con sonerías complejas (como el carillón de Westminster).</p>
               <a href="#" class="btn btn-primary">Add to Cart</a>
             </div>
           </div>
@@ -195,22 +197,21 @@
             <li class="media">
               <img class="mr-3" src="images/Diseño sin título 10.png" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Kieninger</h5>
+                El fabricante más antiguo de mecanismos para relojes de pie en Alemania. Sus piezas de lujo incluyen complicaciones como calendarios perpetuos y fases lunares.
               </div>
             </li>
             <li class="media my-4">
               <img class="mr-3" src="images/Diseño sin título 13.png" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              </div>
+                <h5 class="mt-0 mb-1">Buben &amp; Zorweg</h5>
+              No solo hacen relojes, sino "objetos de tiempo". Sus piezas suelen combinar relojes de alta precisión con cajas fuertes de lujo o vitrinas para colecciones de relojes de pulsera. </div>
             </li>
             <li class="media">
               <img class="mr-3" src="images/Diseño sin título 16.png" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Sinclair Harding</h5>
+                Artesanos ingleses que fabrican relojes de mesa inspirados en los cronómetros marinos de John Harrison. Cada pieza es una joya de latón pulido.
               </div>
             </li>
           </ul>
@@ -220,23 +221,21 @@
             <li class="media">
               <img class="mr-3" src="images/Diseño sin título 11.png" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Howard Miller</h5>
+                Marca estadounidense de alto prestigio. Sus relojes de pie suelen ser piezas de herencia familiar, utilizando maderas como caoba y cerezo con incrustaciones de oro.
               </div>
             </li>
             <li class="media my-4">
               <img class="mr-3" src="images/Diseño sin título 14.png" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              </div>
+                <h5 class="mt-0 mb-1">Qlocktwo</h5>
+              Una propuesta moderna de lujo. En lugar de agujas, utiliza una matriz de letras que iluminan la hora de forma escrita (ej: "Son las diez y cuarto"). Son piezas de arte minimalista para paredes de diseño. </div>
             </li>
             <li class="media">
               <img class="mr-3" src="images/Diseño sin título 17.png" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              </div>
+                <h5 class="mt-0 mb-1">Chelsea Clock Company</h5>
+              Conocida como "The Timekeepers of the Sea". Sus relojes de latón para barcos y despachos son un estándar de lujo náutico desde 1897. </div>
             </li>
           </ul>
         </div>
@@ -245,22 +244,22 @@
             <li class="media">
               <img class="mr-3" src="images/Diseño sin título 12.png" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Comitti of London</h5>
+                El referente del lujo británico. Especializados en relojes de estilo Georgiano y Victoriano, terminados a mano con un nivel de detalle exquisito.
               </div>
             </li>
             <li class="media my-4">
               <img class="mr-3" src="images/Diseño sin título 15.png" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Matthew Norman</h5>
+                Especialistas en carriage clocks (relojes de viaje o de oficial). Son pequeños, mecánicos y terminados en latón o paladio.
               </div>
             </li>
             <li class="media">
               <img class="mr-3" src="images/Diseño sin título 18.png" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Vitra (George Nelson Clocks)</h5>
+                Si el lujo para ti es el diseño icónico del siglo XX, los relojes de pared de Vitra son piezas de culto que definieron el estilo Mid-Century Modern.
               </div>
             </li>
           </ul>
