--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Relojería "El tiempo es oro"&nbsp; &nbsp;<br>
+        <a class="navbar-brand" href="#">Relojería "Watches me"&nbsp; &nbsp;<br>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -294,7 +294,7 @@
           </address>
           <address>
             <strong>Daniel Xajpot&nbsp;</strong><br>
-            <a href="mailto:#">danielby2008@example.co</a>
+            <a href="mailto:#">danielby2008@example.com</a>
           </address>
         </div>
       </div>
