--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <img class="card-img-top" src="images/Diseño sin título 5.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Patek Philippe (Relojes de Cúpula)</h5>
-              <p class="card-text"><br>
+              <p class="card-text">&nbsp;Además de pulsera, Patek crea relojes de sobremesa únicos con esmaltado cloisonné. Son piezas de colección extremadamente raras que suelen venderse en subastas por cientos de miles de dólares.
               </p>
               <a href="#" class="btn btn-primary">Add to Cart</a>
             </div>
