--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#">Enlace<br>
+              </a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -118,7 +119,7 @@
       </div>
     </div>
     <hr>
-    <h2 class="text-center">RECOMMENDED PRODUCTS</h2>
+    <h2 class="text-center">Productos Recomendados</h2>
     <hr>
     <div class="container">
       <div class="row text-center">
@@ -271,8 +272,8 @@
       <div class="row">
         <div class="col-6 col-md-8 col-lg-7">
           <div class="row text-center">
-            <div class="col-sm-6 col-md-4 col-lg-4 col-12"><a href="https://web.whatsapp.com/" target="_blank"><img src="images/icons8-whatsapp-100.png" width="100" height="100" alt=""></a> </div>
-            <div class="col-sm-6 col-md-4 col-lg-4 col-12"><a href="https://www.facebook.com/profile.php?id=61556977722848" target="_blank"><img src="images/icons8-facebook-100.png" width="100" height="100" alt=""></a>
+            <div class="col-sm-6 col-md-4 col-lg-4 col-12"><a href="https://web.whatsapp.com/50232079515" target="_blank"><img src="images/icons8-whatsapp-100.png" width="100" height="100" alt=""></a><a href="https://web.whatsapp.com/" target="_blank"></a> </div>
+            <div class="col-sm-6 col-md-4 col-lg-4 col-12"><a href="https://www.facebook.com/profile.php?id=61556977722848" target="_blank"><img src="images/icons8-facebook-100.png" width="100" height="100" alt=""></a><a href="https://www.facebook.com/profile.php?id=61556977722848" target="_blank"></a>
               <ul class="list-unstyled">
 
               </ul>
@@ -303,7 +304,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright © Daniel Xajpot. All rights reserved.</p>
+            <p>Copyright © Daniel Xajpot. Derechos Reservados&nbsp;</p>
           </div>
         </div>
       </div>
