--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Acciones</a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Action</a>
                 <a class="dropdown-item" href="#">Another action</a>
@@ -304,7 +304,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright © Daniel Xajpot. Derechos Reservados&nbsp;</p>
+            <p>Copyright © Daniel Xajpot. Todos los Derechos Reservados&nbsp;</p>
           </div>
         </div>
       </div>
